--- a/index.html
+++ b/index.html
@@ -52,7 +52,43 @@
         
     </header>
     <main>
-
+        <Section class="sec-1">
+            <div class="sec-1-con">
+                <h1 class="sec-1-tit sec-title">Change Your Habits</h1>
+                <p class="sec-1-des paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="images/image 3.png" alt="">
+                    <h5>Movement</h5>
+                    <p class="paragraph">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 2.png" alt="">
+                    <h5>Time</h5>
+                    <p class="paragraph">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 4.png" alt="">
+                    <h5>Practicet</h5>
+                    <p class="paragraph">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="card">
+                    <img src="images/image 5.png" alt="">
+                    <h5>Weight Loss</h5>
+                    <p class="paragraph">We believe fitness should be accessible to everyone</p>
+                </div>
+                
+            </div>
+        </Section>
+        <section class="sec-2">
+            <div class="sec-2-con">
+                <h1 class="sec-title">Run an Extra 
+                    Mile Easily</h1>
+                    <p class="sec-2-des paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p> 
+                    <a href=""><button class="primary-btn">Join Now</button></a>
+            </div>
+        </section>
     </main>
     <footer>
 
