--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                 <h1 class="sec-title">Run an Extra 
                     Mile Easily</h1>
                     <p class="sec-2-des paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p> 
-                    <a href=""><button class="primary-btn">Join Now</button></a>
+                    <a href=""><button class="primary-btn sec-2-btn">Join Now</button></a>
+            </div>
+            <div class="sec-2-img">
+                <img src="images/run.jpg" alt="">
             </div>
         </section>
     </main>
