--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
                 </div>
             </div>
          </Section>
+         <!-- Section-5  -->
+         <section class="sec-5">
+            <div class="sec-5-con">
+                <h1 class="sec-5-tit sec-title">Our Pricing Plan</h1>
+                <p class="sec-5-des paragraph">Which one you want to purchase?</p>
+            </div>
+         </section> </section>
 
     </main>
     <footer>
