--- a/index.html
+++ b/index.html
@@ -96,7 +96,57 @@
         </section>
         <!-- Section-3  -->
          <Section class="sec-3">
-
+            <div class="sec-3-con">
+                <h1 class="sec-title">BMI Calculator</h1>
+                <p class="paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="sec-3-bg">
+            <div class="sec-3-all">
+            <div class="table">
+                <h1 class="sec-3-tit">BMI Calculator Chart</h1>
+                <Table>
+                    <tr>
+                        <th>BMI</th>
+                        <th>Weight Status</th>
+                    </tr>
+                    <tr>
+                        <td>Below 18.5</td>
+                        <td>Underweight</td>
+                    </tr>
+                    <tr>
+                        <td>18.5 - 24.9</td>
+                        <td>healthy</td>
+                    </tr>
+                    <tr>
+                        <td>25.0 -29.9</td>
+                        <td>Overweight</td>
+                    </tr>
+                    <tr>
+                        <td>30.0 - and Above</td>
+                        <td>Obese</td>
+                    </tr>
+                </Table>
+            </div>
+            <div class="form">
+                <div class="form-content">
+                    <h1 class="sec-3-tit">Calculate your BMI</h1>
+                    <p class="paragraph">
+                    We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.  
+                    </p>
+                 </div>
+                 <div class="main-form">
+                    <form>
+                        <input type="text" name="" id="" placeholder="Height/cm">
+                        <input type="text" name="" id="" placeholder="weight/kg">
+                        <input type="number" name="" id="" placeholder="Age">
+                     <input type="text" name="" id="" placeholder="Sex">
+                     <input type="text" name="" id="select" placeholder="Select an activity factor">
+                     <input  type="submit" value="Calculate">
+                    </form>
+                 </div>
+            </div>
+            </div>
+            </div>
          </Section>
          <!-- Section-4  -->
          <Section class="sec-4">
@@ -119,7 +169,25 @@
                 <h1 class="sec-5-tit sec-title">Our Pricing Plan</h1>
                 <p class="sec-5-des paragraph">Which one you want to purchase?</p>
             </div>
-         </section> </section>
+            
+            <div class="pricing-cards">
+                <div class="price-card">
+                    <h2>Classic</h2>
+                    <h1>$39</h2>
+                        <p>Per Month</p>
+                </div>
+                <div class="price-card">
+                    <h2>Advance</h2>
+                    <h1>$59</h2>
+                        <p>Per Month</p>
+                </div>
+                <div class="price-card">
+                    <h2>Premium</h2>
+                    <h1>$79</h2>
+                        <p>Per Month</p>
+                </div>
+            </div>
+         </section> 
 
     </main>
     <footer>
