--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             <div class="text">
                 <h1 class="bnr-title">Get body in <span class="shape">shape</span> & stay healthy</h1>
-                <p class="paragraph bnr-des">A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <p class="paragraph bnr-des">Prioritize your well-being with balanced nutrition, regular exercise, and mindful habits. Small daily choices can lead to significant improvements in your overall health and vitality.</p>
                 <div class="buttons">
                     <a href=""><button class="join-now primary-btn">Join Club Now!</button></a>
                     <a href=""><button class="download primary-btn">Download App</button></a>
@@ -56,7 +56,7 @@
         <Section class="sec-1">
             <div class="sec-1-con">
                 <h1 class="sec-1-tit sec-title">Change Your Habits</h1>
-                <p class="sec-1-des paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="sec-1-des paragraph">Change your habits to transform your life. Small adjustments lead to big improvements in health and happiness.</p>
             </div>
             <div class="cards">
                 <div class="card">
@@ -87,7 +87,7 @@
             <div class="sec-2-con">
                 <h1 class="sec-title">Run an Extra 
                     Mile Easily</h1>
-                    <p class="sec-2-des paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p> 
+                    <p class="sec-2-des paragraph">Join our gym community today! Experience top-notch facilities, motivating trainers, and a supportive atmosphere that helps you reach your fitness goals. Your best self starts here!</p> 
                     <a href=""><button class="primary-btn sec-2-btn">Join Now</button></a>
             </div>
             <div class="sec-2-img">
@@ -98,7 +98,7 @@
          <Section class="sec-3">
             <div class="sec-3-con">
                 <h1 class="sec-title">BMI Calculator</h1>
-                <p class="paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="paragraph">Calcultate your BMI to know about your health condition.</p>
             </div>
             <div class="sec-3-bg">
             <div class="sec-3-all">
@@ -152,7 +152,7 @@
          <Section class="sec-4">
             <div class="sec-4-con">
                 <h1 class="sec-4-tit sec-title">Meet Our Team</h1>
-                <p class="sec-4-des  paragraph">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                <p class="sec-4-des  paragraph">Passionate trainers dedicated to guiding you on your fitness journey, offering personalized support and motivation to help you achieve your goals. </p>
             </div>
             <div class="photos">
                 <div class="single-photo">
